Alignment and spacing fix

--- a/css/replate.css
+++ b/css/replate.css
@@ -66,6 +66,11 @@ footer{
 .attribution {
     font-size: 1rem;
 }
+
+footer .nav-pages {
+    margin-top: 1rem;
+    align-self: flex-start;
+}
 /* end of footer styling */
 
 /* start combined header/footer styling */
@@ -73,7 +78,7 @@ footer{
     display: flex;
     justify-content: space-between;
     height: 10vh;
-    margin: 1rem;
+    margin: 0 1rem;
 }
 
 .nav-left {
